--- a/6/origins.yaml
+++ b/6/origins.yaml
@@ -17,7 +17,7 @@ props:
             hooks: [ns]
     icon:
         desc: The item stack which is displayed as the icon for the origin in the top-left corner of the choose/view origin screen.
-        id: powers-6
+        id: powers
         link: item_stack
         gap: true
     upgrades:
