--- a/6/powers.yaml
+++ b/6/powers.yaml
@@ -476,7 +476,7 @@ links:
                             ingredient:
                                 desc: An ingredient, which can be a variety of things.
                                 href: https://origins.readthedocs.io/en/0.7.3/data_types/ingredient/
-                                id: recipes-6
+                                id: recipes
                                 link: oritem
                         string-origins:meat: {}
           - title: custom
@@ -1594,7 +1594,7 @@ links:
                             link: entity_cond
                     string-origins:recipe:
                         recipe:
-                            id: recipes-6
+                            id: recipes
                             extend: power_recipe
                             desc: The recipe to craft, including an id field which can be any arbitrary (but unique) identifier.
                     string-origins:resource:
