--- a/18/item_modifiers.yaml
+++ b/18/item_modifiers.yaml
@@ -231,7 +231,7 @@ links:
                 desc: Determines conditions for this function to be applied. If multiple conditions are specified, all must pass.
                 type: list
                 vals:
-                    id: predicates-12
+                    id: predicates
                     link: single_pred
             function:
                 extend: function
@@ -362,7 +362,7 @@ links:
                     type: boolean
                 levels:
                     desc: The enchantment level to use.
-                    id: predicates-12
+                    id: predicates
                     link: intprov
             string-minecraft:exploration_map:
                 destination:
@@ -394,20 +394,20 @@ links:
             string-minecraft:limit_count:
                 limit:
                     or:
-                      - id: predicates-12
+                      - id: predicates
                         link: intprov
                       - type: object
                         props:
                             min:
-                                id: predicates-12
+                                id: predicates
                                 link: intprov
                             max:
-                                id: predicates-12
+                                id: predicates
                                 link: intprov
             string-minecraft:looting_enchant:
                 count:
                     desc: Specifies the number of additional items per level of looting. Note the number may be fractional, rounded after multiplying by the looting level.
-                    id: predicates-12
+                    id: predicates
                     link: intprov
                 limit:
                     desc: Specifies the maximum amount of items in the stack after the looting calculation. If the value is 0, no limit is applied.
@@ -430,7 +430,7 @@ links:
                                 enum: [addition, multiply_base, multiply_total]
                             amount:
                                 desc: Specifies the amount of the modifier.
-                                id: predicates-12
+                                id: predicates
                                 link: numprov
                             id:
                                 desc: Optional; UUID of the modifier following. If none specified, a new UUID is generated.
@@ -486,7 +486,7 @@ links:
                     desc: The entries to use as contents for the item container.
                     type: list
                     vals:
-                        id: loot_tables-7
+                        id: loot_tables
                         link: entry
                 type:
                     desc: The type to be written in "BlockEntityTag.id". 1.18+ only.
@@ -494,7 +494,7 @@ links:
             string-minecraft:set_count:
                 count:
                     desc: Specifies the stack size to set.
-                    id: predicates-12
+                    id: predicates
                     link: intprov
                 add:
                     desc: If true, changes will be relative to current count.
@@ -502,7 +502,7 @@ links:
             string-minecraft:set_damage:
                 damage:
                     desc: Specifies the damage fraction to set (1.0 is undamaged, 0.0 is zero durability left).
-                    id: predicates-12
+                    id: predicates
                     link: numprov
                 add:
                     desc: If true, change will be relative to current damage.
@@ -512,7 +512,7 @@ links:
                     desc: Key name is the enchantment ID. Value is a number provider specifying the enchantment level. Levels are clamped at a maximum of 255. Levels below 1 cause the enchantment to be removed, unless add is set to true, in which case only negative values will remove the enchantment if they cause the enchantment level to fall below 1.
                     type: object
                     extra:
-                        id: predicates-12
+                        id: predicates
                         link: intprov
                 add:
                     desc: Optional. If true, change will be relative to current level. A nonexistent enchantment will be presumed to start at 0.
@@ -576,7 +576,7 @@ links:
                                 allow: '*a-z0-9_#\/:.-'
                             duration:
                                 desc: The duration of the effect.
-                                id: predicates-12
+                                id: predicates
                                 link: intprov
             string-apoli:add_power:
                 slot:
