--- a/18/origin_layers.yaml
+++ b/18/origin_layers.yaml
@@ -23,7 +23,7 @@ props:
                     props:
                         condition:
                             desc: The condition that the player needs to fulfill to get access to the origins specified here.
-                            id: powers-18
+                            id: powers
                             link: entity_cond
                         origins:
                             desc: IDs of the origins which should become available when the condition is fulfilled.
