--- a/6/recipes.yaml
+++ b/6/recipes.yaml
@@ -82,10 +82,10 @@ links:
                             type: object
                             extra:
                                 nopanel: true
-                                id: recipes-6
+                                id: recipes
                                 extend: oritem
                         result:
-                            id: recipes-6
+                            id: recipes
                             link: result
                     string-minecraft:crafting_shapeless:
                         ingredients:
@@ -93,7 +93,7 @@ links:
                             vals:
                                 link: oritem
                         result:
-                            id: recipes-6
+                            id: recipes
                             link: result
     recipe:
         type: or
@@ -120,7 +120,7 @@ links:
                                 type: object
                                 extra:
                                     nopanel: true
-                                    id: recipes-6
+                                    id: recipes
                                     extend: oritem
                             result:
                                 link: result
@@ -166,7 +166,7 @@ links:
                     gap: true
                 ingredient:
                     desc: The ingredient or list of acceptable incredients cooked by this recipe.
-                    id: recipes-6
+                    id: recipes
                     link: oritem
                 result:
                     extend: item
@@ -208,6 +208,6 @@ links:
                     desc: The type of the recipe.
                     type: string
             extra:
-                id: powers-6
+                id: powers
                 link: nany
 link: recipe
