--- a/8/powers.yaml
+++ b/8/powers.yaml
@@ -760,7 +760,7 @@ links:
                             ingredient:
                                 desc: An ingredient, which can be a variety of things.
                                 href: https://origins.readthedocs.io/en/1.4.1/types/item_condition_types/ingredient/
-                                id: recipes-6
+                                id: recipes
                                 link: oritem
                         string-origins:meat: {}
                         string-origins:nbt:
@@ -2603,7 +2603,7 @@ links:
                             link: entity_cond
                     string-origins:recipe:
                         recipe:
-                            id: recipes-6
+                            id: recipes
                             extend: power_recipe
                             desc: The recipe to craft, including an id field which can be any arbitrary (but unique) identifier.
                     string-origins:resource:
@@ -3575,7 +3575,7 @@ links:
         type: object
         props:
             item:
-                id: predicates-8
+                id: predicates
                 link: item
             amount:
                 desc: Size of the stack. Defaults to 1.
